Resolves layout issues in mobile landscape view

--- a/src/styles/components/nav.module.scss
+++ b/src/styles/components/nav.module.scss
@@ -29,6 +29,11 @@
 		}
 	}
 
+	@media screen and (max-width:700px) and (max-height:400px) {
+		padding:1em 2em;
+		display:none;
+	}
+
 
 }
 
