--- a/src/styles/sections/hero.module.scss
+++ b/src/styles/sections/hero.module.scss
@@ -14,6 +14,11 @@
 		color: var(--black);
 	}
 
+	@media screen and (max-width:700px) and (max-height:400px) {
+		padding:0.75em 2em;
+		font-size:0.9rem;
+	}
+
 }
 
 .wrapper {
@@ -58,6 +63,7 @@
 		font-weight:200;
 	}
 
+
 	@media screen and ( max-width:1125px) {
 		h1 {
 			font-size:4.25rem;
@@ -77,6 +83,14 @@
 
 		h2 {
 			font-size:1.3rem;
+		}
+
+	}
+
+	@media screen and (max-width:700px) and (max-height:400px) {
+
+		h1 {
+			font-size:3rem;
 		}
 
 	}
@@ -108,6 +122,10 @@
 		animation-timing-function: ease-in-out;
 		animation-iteration-count:infinite;
 		animation-direction:alternate;
+	}
+
+	@media screen and (max-width:700px) and (max-height:400px) {
+		display:none;
 	}
 
 }
